fit_predictor/tsp_gls/evaluates/run24/2024-12-29_21-28-10/problem_iter5_response14.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 16
    local heuristic = distance_matrix[i, j] - (min_dist_i + min_dist_j)
          ^^^^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 16
    local heuristic = distance_matrix[i, j] - (min_dist_i + min_dist_j)
          ^^^^^^^^^
SyntaxError: invalid syntax
